# chess

./: Cargo.toml
.cargo/: config.toml
src/: ab.rs  main.rs  testing.rs
src/chess/: ab.rs  bitboard.rs  board.rs  direction.rs  engine.rs  legal.rs  mod.rs  moves.rs  piece.rs  piecemoves.rs  side.rs  square.rs
testcases/: castling.json  depths.epd  standard.json
