[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.9.1", features = ["dynamic"] }
vampirc-uci = "0.11.1"
colored = "2.0.0"
fen = "0.1.0"
serde = { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3