[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vampirc-uci = "0.11.1"
colored = "2.0.0"
fen = "0.1.0"
serde = { version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
scoped_threadpool = "0.1.9"
memoize = "0.3.3"
array-const-fn-init = "0.1.1"
static_init = "1.0.3"
tokio = { version = "1.23.0", features = ["full"] }
async-recursion = "1.0.0"

[profile.release]
debug = true
lto = "thin"

[profile.dev]
opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3